--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,12 @@ a {
   transition: all 0.3s ease;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
